--- a/TextileResearchDevelopment/Views/Shared/_Layout.cshtml
+++ b/TextileResearchDevelopment/Views/Shared/_Layout.cshtml
@@ -37,7 +37,11 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
+    <script type="text/javascript" charset="utf8" src="http://cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js"></script>
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/popper")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/mdb")
     @RenderSection("scripts", required: false)
 </body>
 </html>
