--- a/TextileResearchDevelopment/Views/Shared/_Layout.cshtml
+++ b/TextileResearchDevelopment/Views/Shared/_Layout.cshtml
@@ -6,6 +6,12 @@
     <title>@ViewBag.Title - Textile Research Development </title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/moment")
+    @Scripts.Render("~/bundles/popper")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/mdb")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -36,12 +42,7 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    <script type="text/javascript" charset="utf8" src="http://cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js"></script>
-    @Scripts.Render("~/bundles/jqueryval")
-    @Scripts.Render("~/bundles/popper")
-    @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/mdb")
+    
     @RenderSection("scripts", required: false)
 </body>
 </html>
